fix alignment of admin page buttons

--- a/app/src/app/views/admin-page/admin-page.component.scss
+++ b/app/src/app/views/admin-page/admin-page.component.scss
@@ -8,6 +8,7 @@
     button {
         width: 225px;
         height: 175px;
+        margin: 0 10px 0 10px;
 
         h2 { white-space: normal; } 
     }
